# AI_FUN

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  backprop.txt  digitRecognition.json  digitsAugmented.json  main.cpp  newDigits.json  newDigits2.json  settings.json  trainStuff
Engine/: CMakeLists.txt
Engine/AnimatedSprite/: AnimatedSprite.cpp  AnimatedSprite.hpp
Engine/Clickable/: Clickable.cpp  Clickable.hpp
Engine/CollisionComponent/: CollisionComponent.cpp  CollisionComponent.hpp
Engine/CollisionShape/: CollisionShape.cpp  CollisionShape.hpp
Engine/GUI/: Button.cpp  Button.hpp  Label.cpp  Label.hpp
Engine/Game/: Game.cpp  Game.hpp
Engine/JsonBridge/: JsonBridge.cpp  JsonBridge.hpp
Engine/Math/: Base.cpp  Base.hpp  Geometry.cpp  Geometry.hpp  Math.hpp  Matrix.cpp  Matrix.hpp  Vector2.cpp  Vector2.hpp  Vector2f.cpp  Vector2f.hpp
Engine/Nodes/: CircleShape.cpp  CircleShape.hpp  RayShape.cpp  RayShape.hpp  RectShape.cpp  RectShape.hpp
Engine/Random/: Random.cpp  Random.hpp
Engine/ResourceManager/: ResourceManager.cpp  ResourceManager.hpp
Engine/SpriteBatch/: QuickSprite.cpp  QuickSprite.hpp  SpriteBatch.cpp  SpriteBatch.hpp
Engine/Tile/: Tile.cpp  Tile.hpp
Engine/TileMap/: TileMap.hpp  TileMapLayer.cpp  TileMapLayer.hpp  TileMapOld.cpp  TileMapOld.hpp
Engine/Updatable/: Updatable.hpp
Engine/Utils/: Rect.hpp
Engine/WorldEntity/: BoxyWorldEntity.cpp  BoxyWorldEntity.hpp  WorldEntity.cpp  WorldEntity.hpp
dependencies/: CMakeLists.txt
models/digits/: digitRecognitionMore.json
resources/flappy_bird/: flappy_project.aseprite  flappy_sheet.aseprite
src/: CMakeLists.txt  IdxDigitTrainer.cpp  IdxDigitTrainer.hpp  Test.cpp  Test.hpp
src/AI/: CMakeLists.txt  NeuralNetwork.cpp  NeuralNetwork.hpp
src/AI/Base/: ActivatingFunction.cpp  ActivatingFunction.hpp  CostFunction.cpp  CostFunction.hpp  Layer.cpp  Layer.hpp  NeuralNetwork.cpp  NeuralNetwork.hpp  NeuralNetworkCalculationState.cpp  NeuralNetworkCalculationState.hpp
src/AI/Coaches/: LayerGradient.cpp  LayerGradient.hpp  NeuralNetworkCoach.cpp  NeuralNetworkCoach.hpp
src/Scenes/: IdxImageViewer.cpp  IdxImageViewer.hpp  ImageClassifier.cpp  ImageClassifier.hpp  ImageClassifierScene.cpp  ImageClassifierScene.hpp  Images.cpp  Images.hpp  MNISTImageViewer.cpp  MNISTImageViewer.hpp  MainMenu.cpp  MainMenu.hpp  idxImageViewer.cpp  idxImageViewer.hpp
src/Scenes/DigitDrawing/: DrawBoard.cpp  DrawBoard.hpp
src/Scenes/FlappyBird/: FlappyBars.cpp  FlappyBars.hpp  FlappyController.cpp  FlappyController.hpp  FlappyGame.cpp  FlappyGame.hpp  FlappyKeyboardController.cpp  FlappyKeyboardController.hpp  FlappyLevel.cpp  FlappyLevel.hpp  FlappyPlayer.cpp  FlappyPlayer.hpp  FlappyRenderer.cpp  FlappyRenderer.hpp
src/Scenes/IdxTestImgRecognition/: IdxDigitTrainer.cpp  IdxDigitTrainer.hpp  IdxImageViewer.cpp  IdxImageViewer.hpp  ImageClassifierScene.cpp  ImageClassifierScene.hpp  TestImageTransitions.cpp  TestImageTransitions.hpp  trainerMain.cpp
src/Scenes/MnistTestImgRecognition/: ImageClassifierScene.cpp
src/Scenes/idx/: Reader.cpp  Reader.hpp
src/ai/: CMakeLists.txt
src/ai/Base/: ActivatingFunction.cpp  ActivatingFunction.hpp  CostFunction.cpp  CostFunction.hpp  Layer.cpp  Layer.hpp  NeuralNetwork.cpp  NeuralNetwork.hpp  NeuralNetworkCalculationState.cpp  NeuralNetworkCalculationState.hpp
src/ai/Coaches/: LayerGradient.cpp  LayerGradient.hpp  NeuralNetworkCoach.cpp  NeuralNetworkCoach.hpp
src/ai/ModelLoader/: NeuralNetworkManager.cpp  NeuralNetworkManager.hpp
src/idx/: Reader.cpp  Reader.hpp
